--- a/PicPay.Simplificado/src/PicPay.Simplificado.Domain.Core/PicPay.Simplificado.Domain.Core.csproj
+++ b/PicPay.Simplificado/src/PicPay.Simplificado.Domain.Core/PicPay.Simplificado.Domain.Core.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PicPay.Simplificado.Domain\PicPay.Simplificado.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
