--- a/PicPay.Simplificado/src/PicPay.Simplificado.Infrastructure/PicPay.Simplificado.Infrastructure.csproj
+++ b/PicPay.Simplificado/src/PicPay.Simplificado.Infrastructure/PicPay.Simplificado.Infrastructure.csproj
@@ -8,7 +8,6 @@
 
   <ItemGroup>
     <Folder Include="CrossCutting\" />
-    <Folder Include="Extensions\Ioc\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,6 +20,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.1" />
   </ItemGroup>
 
