Criando Usuario Comum V1

--- a/PicPay.Simplificado/src/PicPay.Simplificado.Infrastructure/PicPay.Simplificado.Infrastructure.csproj
+++ b/PicPay.Simplificado/src/PicPay.Simplificado.Infrastructure/PicPay.Simplificado.Infrastructure.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PicPay.Simplificado.Application\PicPay.Simplificado.Application.csproj" />
     <ProjectReference Include="..\PicPay.Simplificado.Domain.Core\PicPay.Simplificado.Domain.Core.csproj" />
     <ProjectReference Include="..\PicPay.Simplificado.Domain\PicPay.Simplificado.Domain.csproj" />
   </ItemGroup>
