--- a/PicPay.Simplificado/src/PicPay.Simplificado.Application/PicPay.Simplificado.Application.csproj
+++ b/PicPay.Simplificado/src/PicPay.Simplificado.Application/PicPay.Simplificado.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\PicPay.Simplificado.Domain.Core\PicPay.Simplificado.Domain.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Response\UsuarioComum\Queris\" />
+  </ItemGroup>
+
 </Project>
