--- a/PicPay.Simplificado/src/PicPay.Simplificado.Application/PicPay.Simplificado.Application.csproj
+++ b/PicPay.Simplificado/src/PicPay.Simplificado.Application/PicPay.Simplificado.Application.csproj
@@ -14,4 +14,9 @@
     <Folder Include="Response\UsuarioComum\Queris\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.14" />
+  </ItemGroup>
+
 </Project>
