--- a/PicPay.Simplificado/src/PicPay.Simplificado.Api/appsettings.json
+++ b/PicPay.Simplificado/src/PicPay.Simplificado.Api/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "Picpay": "Server=localhost,1433;Database=Picpay;User ID=sa;Password=1q2w3e4r@#$;Trusted_Connection=False; TrustServerCertificate=True;"
   },
+  "Providers": {
+    "Authorize": {
+      "BaseAddress": "https://util.devi.tools/api/v2/authorize"
+    }
+  },
   "AllowedHosts": "*"
 }
