Adc Bloquei LojisTransacao

--- a/PicPay.Simplificado/src/PicPay.Simplificado.Domain.Core/PicPay.Simplificado.Domain.Core.csproj
+++ b/PicPay.Simplificado/src/PicPay.Simplificado.Domain.Core/PicPay.Simplificado.Domain.Core.csproj
@@ -10,4 +10,10 @@
     <ProjectReference Include="..\PicPay.Simplificado.Domain\PicPay.Simplificado.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Exeception\" />
+    <Folder Include="Interfaces\Validadores\" />
+    <Folder Include="Validadores\" />
+  </ItemGroup>
+
 </Project>
