--- a/PicPay.Simplificado/src/PicPay.Simplificado.Api/Dockerfile
+++ b/PicPay.Simplificado/src/PicPay.Simplificado.Api/Dockerfile
@@ -1,25 +1,32 @@
 #See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+RUN apt-get update && apt-get install -y curl
 USER app
 WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
+EXPOSE 443
+EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["src/PicPay.Simplificado.Api/PicPay.Simplificado.Api.csproj", "src/PicPay.Simplificado.Api/"]
-RUN dotnet restore "./src/PicPay.Simplificado.Api/PicPay.Simplificado.Api.csproj"
+COPY ["PicPay.Simplificado.Api/PicPay.Simplificado.Api.csproj", "PicPay.Simplificado.Api/"]
+COPY ["PicPay.Simplificado.Application/PicPay.Simplificado.Application.csproj", "PicPay.Simplificado.Application/"]
+COPY ["PicPay.Simplificado.Domain/PicPay.Simplificado.Domain.csproj", "PicPay.Simplificado.Domain/"]
+COPY ["PicPay.Simplificado.Domain.Core/PicPay.Simplificado.Domain.Core.csproj", "PicPay.Simplificado.Domain.Core/"]
+COPY ["PicPay.Simplificado.Infrastructure/PicPay.Simplificado.Infrastructure.csproj", "PicPay.Simplificado.Infrastructure/"]
+COPY ["PicPay.Simplificado.Service/PicPay.Simplificado.Service.csproj", "PicPay.Simplificado.Service/"]
+RUN dotnet restore "PicPay.Simplificado.Api/PicPay.Simplificado.Api.csproj"
 COPY . .
-WORKDIR "/src/src/PicPay.Simplificado.Api"
-RUN dotnet build "./PicPay.Simplificado.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "PicPay.Simplificado.Api/PicPay.Simplificado.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./PicPay.Simplificado.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "PicPay.Simplificado.Api/PicPay.Simplificado.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "PicPay.Simplificado.Api.dll"]
+
+# docker build -t picpay.simplificado .
